--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <p>We may update this policy occasionally. Changes will be posted within the game or on the official website.</p>
 
     <h2>10. Contact Us</h2>
-    <p>If you have any questions or concerns about this policy, you can reach us at: <strong>support@omigame.com</strong></p>
+    <p>If you have any questions or concerns about this policy, you can reach us at: <strong>kavindu11250403@gmail.com</strong></p>
   </div>
 
   <footer>
